1.4.0 1.21 cherrypick (#1768)
Co-authored-by: Gate Guardian <147252672+qwer523@users.noreply.github.com>
Co-authored-by: Andromeda <61988002+3x1t-5tyl3@users.noreply.github.com>
Co-authored-by: YoungOnion <39562198+YoungOnionMC@users.noreply.github.com>
Co-authored-by: DEv0on <bananamen02@gmail.com>
Co-authored-by: lonevox <quinn.epicness@gmail.com>
Co-authored-by: Georgy <32033856+stivosha@users.noreply.github.com>
Co-authored-by: marisathewitch <stars43@yandex.ru>
Co-authored-by: Anonymous <noreply@weblate.org>
Co-authored-by: Western01 <alexgruzdev47@gmail.com>
Co-authored-by: iouter <62897714+iouter@users.noreply.github.com>
Co-authored-by: code-onigiri <140694827+code-onigiri@users.noreply.github.com>
Co-authored-by: Shibata Masanari <shibatamasanari759@gmail.com>
Co-authored-by: IamNotBrianZ <74340257+IamNotBrianZ@users.noreply.github.com>
Co-authored-by: Stanley Goodwin <github@staniel.dev>
Co-authored-by: Rundas <38040866+Rundas01@users.noreply.github.com>
Co-authored-by: Miner239 <siputgila@gmail.com>
Co-authored-by: Ghostipedia <46772882+ghostipedia@users.noreply.github.com>
Co-authored-by: Karthi Suresh <75553966+juiceybeans@users.noreply.github.com>
Co-authored-by: DancingSnow <60736156+DancingSnow0517@users.noreply.github.com>
Co-authored-by: James Mitchell <tehgeek@gmail.com>
Co-authored-by: 梅天佑 <52530814+MeiTianyou@users.noreply.github.com>
Co-authored-by: Pumpkin7266 <rainpumpkin7266@gmail.com>
Co-authored-by: Ghostipedia <Ghostipedia@gmail.com>